--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -911,6 +911,10 @@ a {
     background: #fff;
 }
 
+.pricing-item__active {
+    box-shadow: 0px 20px 44px 0px rgba(195, 108, 22, 0.06);
+}
+
 .pricing-item__type {
     color: #ff5b2e;
     font-size: 1.2rem;
@@ -961,4 +965,141 @@ a {
 .pricing-item__item::before {
     margin-right: 14px;
     content: url(../icons/pricing-check.svg);
+}
+
+/* Review */
+.review {
+    padding: 104px 0 52px;
+}
+
+.review__inner {
+    display: flex;
+    align-items: center;
+    column-gap: 44px;
+}
+
+.review__control {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+    width: 54px;
+    height: 54px;
+    color: #ff5b2e;
+    border: 1.5px solid #ffd1c4;
+    border-radius: 50%;
+    background-color: transparent;
+}
+
+.review__control:nth-of-type(1) {
+    rotate: 180deg;
+}
+
+.review__control:hover {
+    color: #fff;
+    border-color: #ff5b2e;
+    background-color: #ff5b2e;
+    cursor: pointer;
+}
+
+.review__control:nth-of-type(2) {
+    margin-left: auto;
+}
+
+.review-item {
+    display: flex;
+    align-items: center;
+    gap: 115px;
+    width: 100%;
+    flex-shrink: 0;
+}
+
+.review__content {
+    margin-top: 28px;
+    overflow: hidden;
+}
+
+.review__list {
+    display: flex;
+}
+
+.review-item__media {
+    position: relative;
+    width: 274px;
+    flex-shrink: 0;
+    border-radius: 137px;
+    margin-top: -52px;
+}
+
+.review-item__media::before {
+    position: absolute;
+    content: "";
+    display: inline-block;
+    inset: auto 0 0 0;
+    height: 82%;
+    border-radius: inherit;
+    background: #ffda54;
+}
+
+.review-item__img {
+    display: block;
+    position: relative;
+    z-index: 1;
+    width: 100%;
+    border-radius: inherit;
+}
+
+.review-item__quote {
+    margin-top: 24px;
+    width: 553px;
+    color: #000;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1.55;
+}
+
+.review-item__author {
+    display: flex;
+    align-items: center;
+    margin-top: 34px;
+    color: #282828;
+    font-family: Sora;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1;
+}
+
+.review-item__author::before {
+    content: "";
+    display: inline-block;
+    margin-right: 8px;
+    width: 20px;
+    height: 2px;
+    background: #000;
+    border-radius: 1px;
+}
+
+.review__dots {
+    margin-top: 56px;
+    display: flex;
+    justify-content: center;
+    gap: 8px;
+}
+
+.review__dot {
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    border: 1px solid #ff5b2e;
+}
+
+.review__dot:hover {
+    background-color: #ff5b2e;
+    cursor: pointer;
+}
+
+.review__dot--active {
+    width: 24px;
+    background-color: #ff5b2e;
+    border-radius: 4px;
 }
